k8s/keycloak/overlay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    jali-clarke.external-dns.alpha.kubernetes.io/is-external: "true"
spec:
  ingressClassName: external
  tls:
  - hosts:
    - keycloak.jali-clarke.ca
    secretName: jali-clarke-ca
  rules:
  - host: keycloak.jali-clarke.ca
    http:
      paths:
      - pathType: Prefix
        path: "/realms/homelab"
        backend:
          service:
            name: keycloak
            port:
              number: 8080
      - pathType: Prefix
        path: "/resources"
        backend:
          service:
            name: keycloak
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-admin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: internal
  tls:
  - hosts:
    - keycloak.jali-clarke.ca
    secretName: jali-clarke-ca
  rules:
  - host: keycloak.jali-clarke.ca
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak
            port:
              number: 8080
